# pecron-monitor

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  cloud_api.py  constants.py  docker-compose.yml  ha_bridge.py  helpers.py  lan_scan.py  local_transport.py  monitor.py  output_state.py  pecron-monitor.service  pecron_monitor.py  protocol.py  pyproject.toml  run.sh  setup_wizard.py  test_all_devices.py  test_auto_discovery.py  test_entity_categories.py  test_ghost_suppression.py  test_model_behavior.py  test_offline_retry.py  test_total_power_fallback.py  test_tsl_gating.py  test_voltage_filter.py
.github/steve-review/: critical-paths.txt  review.sh
.github/workflows/: ci.yml  steve-pr-review.yml
docs/: E1000LFP.md  E1500LFP.md  E3800LFP.md  WB12200.md  known-pecron-api-quirks.md
tests/: README.md  conftest.py
tests/contract/: test_sensor_fields.py
tests/hardware/: config_loader.py  conftest.py  hardware-devices.example.json  test_all_devices.py  test_auto_discovery.py  validate_config.py
tests/unit/: test_command_subscriptions.py  test_continuous_local_retry.py  test_control_readback.py  test_device_status_inference.py  test_domain_fallback.py  test_entity_categories.py  test_ghost_suppression.py  test_ha_command_dispatch.py  test_ha_discovery_republish.py  test_helpers.py  test_local_fix.py  test_local_shutdown_zero_frame.py  test_model_behavior.py  test_mqtt_recovery.py  test_offline_retry.py  test_poll_interval_floor.py  test_protocol.py  test_restore_outputs.py  test_rules_compound.py  test_rules_engine_state.py  test_rules_multivar.py  test_rules_voltage.py  test_setup_security.py  test_state_class.py  test_status_once_local_retry.py  test_telemetry_field_detection.py  test_total_power_fallback.py  test_tsl_gating.py  test_voltage_filter.py
